<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Viajero</string>
    <string name="action_settings">Configuracion</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo">logo</string>
    <string name="usuario">Usuario</string>
    <string name="ingresar">Ingresar</string>
    <string name="password">password</string>
    <string name="error_autenticacion">Usuario invalido!</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="nuevo_gasto">Nuevo Gasto</string>
    <string name="nuevo_viaje">Nuevo Viaje</string>
    <string name="mis_viajes">Mis Viajes</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="title_activity_viaje">ViajeActivity</string>
    <string name="destino">Destino</string>
    <string name="tipo_de_viaje">Tipo de Viaje</string>
    <string name="placer">placer</string>
    <string name="negocios">negocios</string>
    <string name="fecha_de_llegada">Fecha de Llegada</string>
    <string name="fecha_de_salida">Fecha de Salida</string>
    <string name="seleccione">Seleccione</string>
    <string name="presupuesto">presupuesto</string>
    <string name="crear_nuevo_viaje">Crear Nuevo Viaje</string>
    <string name="cantidad_de_personas">Cantidad de Personas</string>
    <string name="title_activity_gasto">GastoActivity</string>
    <string name="categoria">Categoria</string>
    <string name="valor">Valor</string>
    <string name="fecha">Fecha</string>
    <string name="descripcion">Descripcion</string>
    <string name="local">Local</string>
    <string name="gasto">Gasto</string>

    <string-array name="categoria_gasto">
        <item>Alimentacion</item>
        <item>Combustible</item>
        <item>Transporte</item>
        <item>Hospedaje</item>
        <item>Otros</item>
    </string-array>

    <string name="title_activity_gasto_list">GastoListActivity</string>
    <string name="salir">Salir</string>
    <string name="eliminar_viaje">Eliminar Viaje</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="gastos_realizados">Gastos Realizados</string>
    <string name="opciones">Opciones</string>
    <string name="confirmacion_eliminacion_viaje">¿Desea realmente eliminar el viaje?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="error_seleccionar_viaje">Error al seleccionar viaje</string>
    <string name="preferencias">Preferências</string>
    <string name="modo_viaje">Modo Viaje</string>
    <string name="modo_viaje_resumen">Determina un viaje activo en base a la fecha actual</string>
    <string name="valor_limite">Alerta de gastos</string>
    <string name="valor_limite_resumen">Notifica cuando los gastos sobrepasan el limite establecido</string>
    <string name="informe_valor_limite">Informe de valor limite (en %)</string>
    <string name="mantener_conectado">Mantener Conectado</string>
    <string name="registro_guardar">Registro grabado con exito!</string>
    <string name="error_guardar">Error al guardar!</string>
    <string name="title_activity_configuraciones">ConfiguracionesActivity</string>
    

</resources>